# protheus

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENT-CONSTITUTION.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_TERMS.md  Cargo.toml  Dockerfile  EULA.md  HEARTBEAT.md  LEARNINGS_INDEX.md  LICENSE  MEMORY.md  MEMORY_INDEX.md  README.md  SECURITY.md  SRS.md  TERMS_OF_SERVICE.md  TODO.md  TOOLS.md  UPGRADE_BACKLOG.md  codex.helix  codex_enforcer.md  docker-compose.yml  install.ps1  install.sh  package-lock.json  package.json  state  tsconfig.base.json  tsconfig.systems.build.json  tsconfig.systems.json  verify.sh  vitest.config.ts
apps/pqts/: .env.example  .gitattributes  .gitignore  AGENTS.md  DEVELOPMENT_SUMMARY.md  Makefile  README.md  ROADMAP_LIVE_MONEY.md  demo.py  github_push.sh  main.py  pyproject.toml  requirements.in  requirements.txt  setup_github.sh
apps/pqts/analytics/: attribution.py  calibration_diagnostics.py  control_plane.py  dashboard.py  execution_drift.py  frame_backend.py  funnel.py  incident_automation.py  model_drift.py  monthly_attribution.py  ops_health.py  ops_observability.py  paper_readiness.py  pnl_truth_ledger.py  promotion_gates.py  research_api.py  revenue_api.py  revenue_diagnostics.py  simulation_api.py  simulation_telemetry.py  slo_monitor.py  telemetry_backbone.py
apps/pqts/backtesting/: __init__.py  engine.py  event_engine.py  purged_cv.py
apps/pqts/config/: live_canary.yaml  paper.yaml  paper_calibrated.yaml
apps/pqts/core/: autopilot.py  autopilot_policy.py  compliance_security.py  config_validation.py  data_retention.py  engine.py  market_data_quality.py  mechanism_switches.py  multi_tenant.py  operator_tier.py  persistence.py  risk_manager.py  secret_manager.py  secrets_policy.py  strategy_contracts.py  toggle_manager.py
apps/pqts/dashboard/: app.py  start.py
apps/pqts/docs/: ADVANCED_PATTERNS.md  AGENT_PILOT_CORPUS_AND_AB.md  AUTOPILOT_MODE.md  BACKTESTING.md  GTM_90_DAY_PLAN.md  INCIDENT_RUNBOOK.md  MAX_UTILITY_REVENUE_PLAYBOOK.md  OVERVIEW.md  PRICING_AND_PACKAGING.md  PROTHEUS_TOYBOX.md  RESEARCH_ANALYTICS_LAYER.md  ROADMAP_1M_THIS_YEAR.md  SELF_SERVE_SIGNUP_SPEC.md  SIMULATION_TELEMETRY.md  WORLD_CLASS_30_60_90.md  WORLD_CLASS_EXECUTION_PACK.md  WORLD_CLASS_NEXT_STEPS_EXECUTION.md  X_THREAD_TEMPLATE.md
apps/pqts/execution/: canary_ramp.py  capacity_curves.py  confidence_allocator.py  distributed_ops_state.py  event_replay.py  exchange_certification.py  fee_optimizer.py  live_ops_controls.py  market_data_resilience.py  microstructure_features.py  order_ledger.py  paper_campaign.py  paper_fill_model.py  paper_fill_model.py.bak  portfolio_optimizer.py  realistic_costs.py  reconciliation_daemon.py  reliability.py  risk_aware_router.py  shadow_stream_worker.py  shorting_controls.py  simulation_suite.py  smart_router.py  stream_contracts.py  tca_feedback.py  tca_storage.py  ws_ingestion.py
apps/pqts/features/: feature_store.py
apps/pqts/indicators/: universal.py
apps/pqts/markets/: __init__.py
apps/pqts/portfolio/: __init__.py  fractional_kelly.py  optimizer.py  strategy_allocator.py
apps/pqts/positioning/: __init__.py  sizing.py
apps/pqts/research/: AGENT_SYSTEM_SPEC.md  agent_config.yaml  agent_corpus_card_example.json  agent_corpus_schema.json  ai_agent.py  alpha_discovery_agent.py  analytics_models.py  artifact_registry.py  auto_generator.py  data_lake.py  data_lake_pipeline.py  database.py  generative_engine.py  handoff_blob.py  historical_data.py  hyperopt.py  r_analytics_bridge.py  regime_detector.py  report_builder.py  strategy_selection.py  tournament.py  walk_forward.py  whale_tracking_config.yaml
apps/pqts/risk/: kill_switches.py  regime_overlay.py  risk_tolerance.py
apps/pqts/scripts/: bootstrap_env.sh  build_research_validation_payload.py  calibration_diagnostics_report.py  control_plane_report.py  daily_paper_ops.py  download_historical_data.py  enforce_data_retention.py  execution_drift_report.py  export_handoff_blob.py  funnel_report.py  monthly_attribution_report.py  nightly_live_sandbox_gate.py  ops_health_report.py  paper_readiness_report.py  pnl_truth_ledger_report.py  run_canary_ramp.py  run_capacity_ladder.py  run_continuous_paper.py  run_event_replay.py  run_exchange_certification.py  run_failure_drills.py  run_incident_automation.py  run_mechanism_ablation.py  run_paper_campaign.py  run_promotion_pipeline.py  run_reconciliation_daemon.py  run_shadow_stream_worker.py  run_simulation_suite.py  run_strategy_tournament.py  run_world_class_ops.py  run_ws_ingestion.py  security_compliance_report.py  slo_health_report.py  track_attribution.py  validate_live_secrets.py  weekly_error_budget_review.py  weekly_kpi_report.py
apps/pqts/strategies/: SMART_MONEY_README.md  funding_arbitrage.py  inventory_transfer.py  market_making.py  meta_learner.py  multi_timeframe.py  regime_detector.py  smart_money_discovery.py  smart_money_integration.py  statistical_arbitrage.py  whale_tracking.py
apps/pqts/tests/: test_adapter_idempotency_keys.py  test_adapter_timeouts.py  test_artifact_registry.py  test_attribution.py  test_autopilot_mode.py  test_autopilot_policy.py  test_backtesting.py  test_build_research_validation_payload_cli.py  test_calibration_diagnostics.py  test_calibration_diagnostics_report_cli.py  test_canary_ramp.py  test_capacity_curves.py  test_compliance_security.py  test_confidence_allocator.py  test_config_validation.py  test_control_plane.py  test_control_plane_report_cli.py  test_daily_paper_ops.py  test_data_lake.py  test_data_lake_pipeline.py  test_data_retention.py  test_data_retention_cli.py  test_demo_cli.py  test_distributed_ops_state.py  test_enforcement.py  test_engine_shutdown_persistence.py  test_event_replay.py  test_event_replay_cli.py  test_exchange_certification.py  test_exchange_certification_cli.py  test_execution_drift.py  test_execution_tuning.py  test_experiment_governance.py  test_frame_backend.py  test_funnel.py  test_handoff_blob.py  (+75 more)
crates/conduit/: Cargo.toml
crates/ops/: Cargo.toml
crates/red_legion/: Cargo.toml
(+10381 files in other folders)
