[workspace]
resolver = "2"
members = [
  "crates/blob_test",
  "crates/execution",
  "crates/foundation_hook_enforcer",
  "crates/fluxlattice",
  "crates/graph",
  "crates/memory",
  "crates/memory_abstraction",
  "crates/mobile",
  "crates/observability",
  "crates/ops",
  "crates/pinnacle",
  "crates/red_legion",
  "crates/security",
  "crates/singularity_seed",
  "crates/swarm",
  "crates/vault",
  "systems/memory/rust",
  "systems/self_audit/rust",
  "systems/hybrid/rust"
, "crates/task", "crates/resource", "crates/isolation", "crates/ipc", "crates/storage", "crates/update", "crates/conduit"]

[workspace.package]
edition = "2021"
license = "SEE LICENSE IN LICENSE"

[workspace.metadata.protheus]
msrv = "1.84.0"
owner = "runtime-foundation"
