[workspace]
resolver = "2"
members = [
  "core/layer_minus_one/*",
  "core/layer0/*",
  "core/layer1/*",
  "core/layer2/*",
  "core/layer3/*"
]
exclude = [
  "core/layer0/legacy_rust_sources"
]

[workspace.package]
edition = "2021"
license = "SEE LICENSE IN LICENSE"

[workspace.metadata.protheus]
msrv = "1.84.0"
owner = "runtime-foundation"
