[workspace]
resolver = "2"
members = [
  "core/layer_minus_one/*",
  "core/layer0/*",
  "core/layer1/*",
  "core/layer2/*",
  "core/layer3/*"
]
exclude = [
  "core/layer0/legacy_rust_sources"
]

[workspace.package]
edition = "2021"
license = "SEE LICENSE IN LICENSE"

[workspace.metadata.protheus]
msrv = "1.84.0"
owner = "runtime-foundation"

[workspace.metadata.dist]
cargo-dist-version = "0.28.0"
ci = []
installers = ["shell", "powershell"]
targets = ["x86_64-unknown-linux-musl"]
pr-run-mode = "plan"

[profile.release]
opt-level = "z"
panic = "abort"
strip = true
lto = true
codegen-units = 1

[profile.release-minimal]
inherits = "release"
opt-level = "z"
debug = false
