[package]
name = "protheus-ops-core"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN ../../LICENSE"

[lib]
name = "protheus_ops_core"
path = "src/lib.rs"

[[bin]]
name = "protheus-ops"
path = "src/main.rs"

[[bin]]
name = "personas_core"
path = "src/personas_core.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
num_cpus = "1.16"
sysinfo = { version = "0.30", default-features = false }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
burn_oracle_budget_gate = { path = "../burn_oracle_budget_gate" }
persona_dispatch_security_gate = { path = "../persona_dispatch_security_gate" }

[dev-dependencies]
tempfile = "3.13"
