[package]
name = "blob_test"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN LICENSE"
description = "Proof-of-concept binary blob embedding + hash-gated unfolding."

[lib]
name = "blob_test"
path = "src/lib.rs"

[[bin]]
name = "blob_test"
path = "src/main.rs"

[dependencies]
bincode = "3.0"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
snap = "1.1"
