[package]
name = "protheus-memory-core-v6"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN LICENSE"
description = "Authoritative Rust memory core (Ebbinghaus + CRDT + compression + recall + SQLite)."

[lib]
name = "protheus_memory_core_v6"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "memory-cli"
path = "src/main.rs"

[features]
default = []
ffi = []

[dependencies]
bincode = "3.0"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
snap = "1.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }

[package.metadata.protheus]
wasm_target = "wasm32-unknown-unknown"
ios_targets = ["aarch64-apple-ios", "x86_64-apple-ios"]
android_targets = ["aarch64-linux-android", "x86_64-linux-android"]
