[package]
name = "protheus-memory-core"
version = "0.1.0"
edition = "2021"

[dependencies]
protheus-layer1-memory-runtime = { path = "../../layer1/memory_runtime" }
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
napi = { version = "2", features = ["napi8"] }
napi-derive = "2"
aes-gcm = "0.10"
rand = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }

[dev-dependencies]
tempfile = "3"
