[package]
name = "protheus-mobile-core-v1"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN LICENSE"
description = "Rust mobile adapter exposing core crates with battery-governed runtime cycles."

[lib]
name = "protheus_mobile_core_v1"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "mobile_core"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
execution_core = { path = "../../layer2/execution" }
protheus-pinnacle-core-v1 = { path = "../pinnacle" }
protheus-vault-core-v1 = { path = "../vault" }
protheus-red-legion-core-v1 = { path = "../red_legion" }
protheus-observability-core-v1 = { path = "../../layer1/observability" }
protheus-graph-core-v1 = { path = "../graph" }
protheus-swarm-core-v1 = { path = "../swarm" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[package.metadata.protheus]
wasm_target = "wasm32-unknown-unknown"
ios_targets = ["aarch64-apple-ios", "x86_64-apple-ios"]
android_targets = ["aarch64-linux-android", "x86_64-linux-android"]
