[package]
name = "protheus-security-core-v1"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN LICENSE"
description = "Fail-closed Rust security gate enforcing covenant + sovereignty checks before operation execution."

[lib]
name = "protheus_security_core_v1"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "security_core"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
protheus-memory-core-v6 = { path = "../memory" }
protheus-vault-core-v1 = { path = "../vault" }

[package.metadata.protheus]
wasm_target = "wasm32-unknown-unknown"
ios_targets = ["aarch64-apple-ios", "x86_64-apple-ios"]
android_targets = ["aarch64-linux-android", "x86_64-linux-android"]
