[package]
name = "protheus-autonomy-core-v1"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN LICENSE"
description = "Layer 2 autonomy authority contracts for InfRing."

[lib]
name = "protheus_autonomy_core_v1"
path = "src/lib.rs"

[dependencies]
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
