[package]
name = "execution_core"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN LICENSE"
description = "Deterministic workflow execution core with pause/resume receipts."

[lib]
name = "execution_core"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "execution_core"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hex = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
