[package]
name = "protheus-spine-core-v1"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN LICENSE"
description = "Layer 2 Rust spine authority for deterministic mech-suit runtime control."

[lib]
name = "protheus_spine_core_v1"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3.27"
